Fixed spacing on about page

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -1,5 +1,5 @@
 #contact {
-  min-height: 85vh;
+  min-height: 80vh;
   overflow: auto;
 
   @media only screen and (max-width: 1330px) {
@@ -7,7 +7,7 @@
   }
 
   .image-container {
-    height: 85vh;
+    height: 80vh;
     position: absolute;
     top: 0;
     left: 0;
