--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,9 +9,16 @@
 }
 
 .remove-padding {
-    &.left {
-        padding-left: 0;
-    }
+  &.left {
+      padding-left: 0;
+  }
+}
+
+.double-padding {
+  &.vertical {
+    padding-top: calc( #{$spacing-unit} * 2);
+    padding-bottom: calc( #{$spacing-unit} * 2);
+  }
 }
 
 .no-margin {
@@ -30,7 +37,7 @@
 
 .double-margin {
   &.bottom {
-    margin-bottom: calc( #{$spacing-unit} * 2);
+    margin-bottom: calc( #{$spacing-unit} * 2) !important;
   }
 }
 
